--- a/head.html
+++ b/head.html
@@ -1,4 +1,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link rel="preconnect" href="https://fonts.googleapis.com"/>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+<link href="https://fonts.googleapis.com/css2?family=Asar&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet"/>
+<link rel="icon" type="image/png" href="/images/favicons/favicon-32.png"/>
+<link rel="icon" type="image/png" href="/images/favicons/favicon-32.png" sizes="32x32"/>
+<link rel="icon" type="image/png" href="/images/favicons/favicon-128.png" sizes="128x128"/>
+<link rel="icon" type="image/png" href="/images/favicons/favicon-152.png" sizes="152x152"/>
+<link rel="icon" type="image/png" href="/images/favicons/favicon-167.png" sizes="167x167"/>
+<link rel="icon" type="image/png" href="/images/favicons/favicon-180.png" sizes="180x180"/>
+<link rel="icon" type="image/png" href="/images/favicons/favicon-192.png" sizes="192x192"/>
+<link rel="icon" type="image/png" href="/images/favicons/favicon-512.png" sizes="512x512"/>
+<link rel="shortcut icon" type="image/png" sizes="192x192" href="/images/favicons/favicon-192.png"/>
+<link rel="apple-touch-icon" type="image/png" href="/images/favicons/favicon-128.png" sizes="128x128"/>
+<link rel="apple-touch-icon" type="image/png" href="/images/favicons/favicon-152.png" sizes="152x152"/>
+<link rel="apple-touch-icon" type="image/png" href="/images/favicons/favicon-167.png" sizes="167x167"/>
+<link rel="apple-touch-icon" type="image/png" href="/images/favicons/favicon-180.png" sizes="180x180"/>
+<meta name="msapplication-TileColor" content="#FFFFFF"/>
+<meta name="msapplication-TileImage" content="/images/favicons/favicon-152.png"/>
+<link rel="preload" href="/fonts/wknd-icon-font.ttf" as="font" type="font/ttf" crossorigin/>
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
